v2.8.9   - Made printout of ACES file loaded always display full path to it.
	 - Added Open/Save menus to Image Browser (Reel List).
	 - Improved performance of drawing green cache line.
	 - Bug fixed a hanging bug which would happen when looping from
	   the last frame of a video.
	 - Made Clear Cache work on videos, too.

v2.8.8   - Fixed some crashing and hanging bugs when playing
	   backwards or scrubbing backwards.
	 - Fixed loading of image magick formats on Linux.
	 - Further refinement of reverse playback to make it faster.

v2.8.7   - Made cache a trailing cache when playing forwards, to
	   easily allow for scrubbing.
	 - Made cache a two way cache when scrubbing.
	 - Allowed user to set cache size in Preferences.  The current
	   range is 30 to 200 frames or FPS (twice the FPS).  Note
	   that the requester can be overshot to store even more frames.
	 - Fixed audio trashing memory sometimes, which could lead
	   to a crash.

v2.8.6   - Bug fix of audio caches being unlimited.
	 - Bug fix of reverse playback with audio disappearing.
	 - Further refinement of caches when scrubbing for smoother
	   playback.
	 - Audio offset works with positive values (ie. audio shifted
	   before video ).  Movies and sequences of frames can be
	   saved with added audio shifted.
	 - Added command-line flag (o) to shift audio.

v2.8.5   - Quick bug fix release to remove the bug of playback going
	   too fast due to not syncing with audio on some movie files.

v2.8.4   - Bug fixed audio playback with offsets.
	 - Made scrubbing more fluid due to an expanded cache and some
	   speed optimizations.
	 - Added In (i) and Out (o) hotkeys to quickly set the in and
	   out points of the video(s) being played. 

v2.8.3   - Bug fixed FPS change to prevent FPS of 0 or less.
	 - Bug fixed playback of image sequences not showing the
	   last frame sometimes.
	 - Bug fixed crash in wmv movie files with wmav2 audio.
	 - Sped up saving of GL Snapshots a tad.